--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -29,3 +29,12 @@
     text-align: justify;
     font-family: Georgia;
 }
+
+.intro {
+    width: 60%;
+    font-size: 20px;
+    text-align: justify;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;   
+    margin: auto;
+    background-color: #eee;
+}
